# cpp-exercises

./: .gitignore
00 - Hello World/: CMakeLists.txt  main.cpp
02 - Number Counter/: CMakeLists.txt  main.cpp
03 - SDL OOP/: CMakeLists.txt  color.h  main.cpp  rect.cpp  rect.h
03 - SDL OOP - Part 4/: CMakeLists.txt  circ.cpp  drawable.cpp  drawable.h  main.cpp  rect.h
03 - SDL OOP - Part 4/lib/: sdlinterf.c  sdlinterf.h
07 - Lose/: CMakeLists.txt  main.cpp
08 - Bruchrechnen/: CMakeLists.txt  main.cpp
09 - String-Klasse/: CMakeLists.txt  main.cpp
12 - Messwerte/: CMakeLists.txt  main.cpp
14 - Function Pointer/: CMakeLists.txt  main.cpp
17 - FileIO/: CMakeLists.txt  main.cpp
18 - hexoct/: CMakeLists.txt  main.cpp
21- Date/: CMakeLists.txt  main.cpp
24 - Modus - Templates/: CMakeLists.txt  main.cpp
26 - Pairs/: CMakeLists.txt  main.cpp
27 - textcnt/: CMakeLists.txt  main.cpp
28 - stl - textcnt/: main.cpp
29 - SDL Farbkreis/: CMakeLists.txt  circ.h  color.cpp  color.h  drawable.cpp  drawable.h  main.cpp  rect.cpp
30 - STL FileIO/: CMakeLists.txt  main.cpp
